<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

 <TextView
     android:id="@+id/tvinput"
     android:layout_width="match_parent"
     android:layout_height="250dp"
     android:background="@color/top"
     android:padding="10dp"
     android:textSize="48sp"
     android:gravity="end|bottom"
     />

 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
     android:layout_weight="1"
     android:background="@color/yellow">
  <Button
      android:id="@+id/btnseven"
      android:layout_margin="2dp"
      android:layout_width="0dp"
      android:layout_height="match_parent"
      android:layout_weight="1"
      android:background="@color/white"
      android:onClick="onDigit"
      android:text="@string/_7"
      />
  <Button
      android:id="@+id/btneight"
      android:layout_width="0dp"
      android:layout_margin="2dp"
      android:layout_height="match_parent"
      android:layout_weight="1"
      android:background="@color/yellow"
      android:onClick="onDigit"
      android:text="@string/_8"
      />
  <Button
      android:id="@+id/btnnine"
      android:layout_width="0dp"
      android:layout_margin="2dp"
      android:layout_height="match_parent"
      android:layout_weight="1"
      android:onClick="onDigit"
      android:background="@color/white"
      android:text="@string/_9"
      />
  <Button
      android:id="@+id/btndivide"
      android:layout_width="0dp"
      android:layout_margin="2dp"
      android:layout_height="match_parent"
      android:layout_weight="1"
      android:onClick="onOperator"
      android:background="@color/white"
      android:text="@string/Divide"
      />


  </LinearLayout>
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
     android:layout_weight="1"
     android:background="@color/yellow">
  <Button
      android:id="@+id/btnfour"
      android:layout_margin="2dp"
      android:layout_width="0dp"
      android:layout_height="match_parent"
      android:layout_weight="1"
      android:background="@color/tomota"
      android:onClick="onDigit"
      android:text="@string/_4"
      />
  <Button
      android:id="@+id/btnfive"
      android:layout_width="0dp"
      android:layout_margin="2dp"
      android:layout_height="match_parent"
      android:layout_weight="1"
      android:background="@color/tomota"
      android:onClick="onDigit"
      android:text="@string/_5"
      />
  <Button
      android:id="@+id/btnsix"
      android:layout_width="0dp"
      android:layout_margin="2dp"
      android:layout_height="match_parent"
      android:layout_weight="1"
      android:onClick="onDigit"
      android:background="@color/tomota"
      android:text="@string/_6"
      />
  <Button
      android:id="@+id/btnmultiple"
      android:layout_width="0dp"
      android:layout_margin="2dp"
      android:layout_height="match_parent"
      android:layout_weight="1"
      android:onClick="onOperator"
      android:background="@color/tomota"
      android:text="@string/Multiple"
      />


 </LinearLayout>
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
     android:layout_weight="1"
     android:background="@color/yellow">
  <Button
      android:id="@+id/btnone"
      android:layout_margin="2dp"
      android:layout_width="0dp"
      android:layout_height="match_parent"
      android:layout_weight="1"
      android:background="@color/white"
      android:onClick="onDigit"
      android:text="@string/_1"
      />
  <Button
      android:id="@+id/btntwo"
      android:layout_width="0dp"
      android:layout_margin="2dp"
      android:layout_height="match_parent"
      android:layout_weight="1"
      android:background="@color/white"
      android:onClick="onDigit"
      android:text="@string/_2"
      />
  <Button
      android:id="@+id/btnthree"
      android:layout_width="0dp"
      android:layout_margin="2dp"
      android:layout_height="match_parent"
      android:layout_weight="1"
      android:onClick="onDigit"
      android:background="@color/white"
      android:text="@string/_3"
      />
  <Button
      android:id="@+id/btnsub"
      android:layout_width="0dp"
      android:layout_margin="2dp"
      android:layout_height="match_parent"
      android:layout_weight="1"
      android:onClick="onOperator"
      android:background="@color/white"
      android:text="-"
      />


 </LinearLayout>
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
     android:layout_weight="1"
     android:background="@color/yellow">
  <Button
      android:id="@+id/btnzero"
      android:layout_margin="2dp"
      android:layout_width="0dp"
      android:layout_height="match_parent"
      android:layout_weight="1"
      android:background="@color/white"
      android:onClick="onDigit"
      android:text="@string/_0"
      />
  <Button
      android:id="@+id/btndot"
      android:layout_margin="2dp"
      android:layout_width="0dp"
      android:layout_height="match_parent"
      android:layout_weight="1"
      android:background="@color/white"
      android:onClick="onDecimal"
      android:text="@string/dot"
      />
  <Button
      android:id="@+id/btnclr"
      android:layout_width="0dp"
      android:layout_margin="2dp"
      android:layout_height="match_parent"
      android:layout_weight="1"
      android:background="@color/white"
      android:onClick="onClear"
      android:text="@string/clr"
      />

  <Button
      android:id="@+id/btnadd"
      android:layout_width="0dp"
      android:layout_margin="2dp"
      android:layout_height="match_parent"
      android:layout_weight="1"
      android:onClick="onOperator"
      android:background="@color/white"
      android:text="@string/Add"
      />


 </LinearLayout>
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
     android:layout_weight="1"
     android:background="@color/yellow">
  <Button
      android:id="@+id/btnequals"
      android:layout_margin="2dp"
      android:layout_width="0dp"
      android:layout_height="match_parent"
      android:layout_weight="2"
      android:background="@color/yellow"
      android:onClick="onEqual"
      android:text="@string/equals"
      android:textSize="40dp"
      />



 </LinearLayout>




</LinearLayout>

